--- a/app/src/main/res/layout/maps_fragment.xml
+++ b/app/src/main/res/layout/maps_fragment.xml
@@ -82,20 +82,44 @@
                         android:layout_gravity="center_vertical"
                         android:src="@drawable/destball"/>
 
-                <TextView
-                        android:id="@+id/txtDrop"
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
+                        android:orientation="vertical"
                         android:layout_marginStart="10dp"
-                        android:layout_gravity="center_vertical"
-                        android:imeOptions="actionDone"
-                        android:background="@android:color/transparent"
-                        android:hint="Enter drop location"
-                        android:singleLine="true"/>
+                        android:layout_gravity="center_vertical">
+                    <TextView
+                            android:id="@+id/txtDropAt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Drop at"
+                            android:visibility="gone"
+                            android:textSize="13sp"/>
+                    <TextView
+                            android:id="@+id/txtDrop"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:layout_marginTop="2dp"
+                            android:background="@android:color/transparent"
+                            android:hint="Enter drop location"
+                            android:singleLine="true"/>
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+    <Button
+            android:id="@+id/btnRideNow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:textColor="@android:color/white"
+            android:background="@android:color/black"
+            android:padding="15dp"
+            android:visibility="invisible"
+            android:text="Ride Now"/>
 
 </FrameLayout>
